--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -55,10 +55,12 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
         "import tensorflow as tf\n",
-        "import tensorflow.keras as keras"
+        "from tensorflow.keras import layers"
       ],
       "execution_count": 0,
       "outputs": []
@@ -161,33 +163,42 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "91619d3a-5887-4f00-d7d6-4ae301bf1481"
+        "outputId": "63c40d41-891b-46be-a53c-e194bd238740"
       },
       "source": [
-        "train_df.shape"
+        "print(train_df.shape)\n",
+        "print(test_df.shape)"
       ],
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(60000, 785)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
+          "output_type": "stream",
+          "text": [
+            "(60000, 785)\n",
+            "(10000, 785)\n"
+          ],
+          "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "akMYDs5pB9L5",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Split Training Data  \n",
+        "* Split the training into train and validate  \n",
+        "* Split out X and y from each dataset (format needed for model)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xh6JC8kRBGCf",
+        "id": "65f67nKGEkN9",
         "colab_type": "code",
         "colab": {}
       },
