--- a/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
+++ b/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
@@ -212,6 +212,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bnl02X8cY49D",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Random Steps"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dGEFMfDOzLen",
@@ -233,7 +243,10 @@
       },
       "source": [
         "#check out the pacman action space!\n",
-        "print(env.action_space)"
+        "print(env.action_space)\n",
+        "\n",
+        "# check the observation space\n",
+        "print(env.observation_space)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -247,21 +260,37 @@
       },
       "source": [
         "observation = env.reset()\n",
+        "counter = 0\n",
         "\n",
         "while True:\n",
         "  \n",
         "    env.render()\n",
-        "    \n",
+        "\n",
         "    #your agent goes here\n",
         "    action = env.action_space.sample() \n",
         "         \n",
-        "    observation, reward, done, info = env.step(action) \n",
+        "    observation, reward, done, info = env.step(action)\n",
+        "    counter += 1\n",
         "        \n",
         "    if done: \n",
         "      break;\n",
         "            \n",
+        "print(\"There were {} timesteps\".format(counter))\n",
         "env.close()\n",
         "show_video()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IH7CYfgZdq4d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(reward)"
       ],
       "execution_count": 0,
       "outputs": []
