reduced episodes, added max_score tracker

--- a/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
+++ b/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
@@ -26,46 +26,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GsSGgH2Y0apl",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#          _____                _____                    _____                    _____                    _____                    _____          \n",
-        "#         /\\    \\              /\\    \\                  /\\    \\                  /\\    \\                  /\\    \\                  /\\    \\         \n",
-        "#        /::\\    \\            /::\\    \\                /::\\    \\                /::\\    \\                /::\\    \\                /::\\    \\        \n",
-        "#       /::::\\    \\           \\:::\\    \\              /::::\\    \\              /::::\\    \\              /::::\\    \\               \\:::\\    \\       \n",
-        "#      /::::::\\    \\           \\:::\\    \\            /::::::\\    \\            /::::::\\    \\            /::::::\\    \\               \\:::\\    \\      \n",
-        "#     /:::/\\:::\\    \\           \\:::\\    \\          /:::/\\:::\\    \\          /:::/\\:::\\    \\          /:::/\\:::\\    \\               \\:::\\    \\     \n",
-        "#    /:::/__\\:::\\    \\           \\:::\\    \\        /:::/__\\:::\\    \\        /:::/__\\:::\\    \\        /:::/__\\:::\\    \\               \\:::\\    \\    \n",
-        "#    \\:::\\   \\:::\\    \\          /::::\\    \\      /::::\\   \\:::\\    \\      /::::\\   \\:::\\    \\      /::::\\   \\:::\\    \\              /::::\\    \\   \n",
-        "#  ___\\:::\\   \\:::\\    \\        /::::::\\    \\    /::::::\\   \\:::\\    \\    /::::::\\   \\:::\\    \\    /::::::\\   \\:::\\    \\    ____    /::::::\\    \\  \n",
-        "# /\\   \\:::\\   \\:::\\    \\      /:::/\\:::\\    \\  /:::/\\:::\\   \\:::\\    \\  /:::/\\:::\\   \\:::\\____\\  /:::/\\:::\\   \\:::\\    \\  /\\   \\  /:::/\\:::\\    \\ \n",
-        "#/::\\   \\:::\\   \\:::\\____\\    /:::/  \\:::\\____\\/:::/  \\:::\\   \\:::\\____\\/:::/  \\:::\\   \\:::|    |/:::/  \\:::\\   \\:::\\____\\/::\\   \\/:::/  \\:::\\____\\\n",
-        "#\\:::\\   \\:::\\   \\::/    /   /:::/    \\::/    /\\::/    \\:::\\  /:::/    /\\::/   |::::\\  /:::|____|\\::/    \\:::\\  /:::/    /\\:::\\  /:::/    \\::/    /\n",
-        "# \\:::\\   \\:::\\   \\/____/   /:::/    / \\/____/  \\/____/ \\:::\\/:::/    /  \\/____|:::::\\/:::/    /  \\/____/ \\:::\\/:::/    /  \\:::\\/:::/    / \\/____/ \n",
-        "#  \\:::\\   \\:::\\    \\      /:::/    /                    \\::::::/    /         |:::::::::/    /            \\::::::/    /    \\::::::/    /          \n",
-        "#   \\:::\\   \\:::\\____\\    /:::/    /                      \\::::/    /          |::|\\::::/    /              \\::::/    /      \\::::/____/           \n",
-        "#    \\:::\\  /:::/    /    \\::/    /                       /:::/    /           |::| \\::/____/               /:::/    /        \\:::\\    \\           \n",
-        "#     \\:::\\/:::/    /      \\/____/                       /:::/    /            |::|  ~|                    /:::/    /          \\:::\\    \\          \n",
-        "#      \\::::::/    /                                    /:::/    /             |::|   |                   /:::/    /            \\:::\\    \\         \n",
-        "#       \\::::/    /                                    /:::/    /              \\::|   |                  /:::/    /              \\:::\\____\\        \n",
-        "#        \\::/    /                                     \\::/    /                \\:|   |                  \\::/    /                \\::/    /        \n",
-        "#         \\/____/                                       \\/____/                  \\|___|                   \\/____/                  \\/____/    "
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "odNaDE1zyrL2",
         "colab_type": "text"
       },
       "source": [
-        "# install dependancies, takes around 45 seconds\n",
+        "# Install dependancies, takes around 45 seconds\n",
         "\n",
         "Rendering Dependancies\n",
         "\n"
@@ -485,7 +452,7 @@
         "action_size = env.action_space.n\n",
         "agent = DQN_Agent(state_size, action_size)\n",
         "\n",
-        "episodes = 500\n",
+        "episodes = 10\n",
         "batch_size = 8\n",
         "skip_start = 90  # MsPacman-v0 waits for 90 actions before the episode begins\n",
         "total_time = 0   # Counter for total number of steps taken\n",
@@ -504,6 +471,8 @@
         "colab": {}
       },
       "source": [
+        "max_game_score = 0\n",
+        "\n",
         "for e in range(episodes):\n",
         "    total_reward = 0\n",
         "    game_score = 0\n",
@@ -541,6 +510,8 @@
         "        game_score += reward\n",
         "        reward -= 1  # Punish behavior which does not accumulate reward\n",
         "        total_reward += reward\n",
+        "        if game_score > max_game_score:\n",
+        "            max_game_score = game_score\n",
         "        \n",
         "        if done:\n",
         "            all_rewards += game_score\n",
@@ -551,11 +522,7 @@
         "            break\n",
         "            \n",
         "        if len(agent.memory) > batch_size:\n",
-        "            agent.replay(batch_size)\n",
-        "\n",
-        "\n",
-        "env.close()\n",
-        "show_video()"
+        "            agent.replay(batch_size)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -568,7 +535,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print(max_game_score)"
       ],
       "execution_count": 0,
       "outputs": []
