reduced iterations on DQN

--- a/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
+++ b/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
@@ -6,6 +6,7 @@
       "name": "Rendering OpenAi Gym in Colaboratory.ipynb",
       "provenance": [],
       "private_outputs": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
