--- a/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
+++ b/Rendering_OpenAi_Gym_in_Colaboratory.ipynb
@@ -33,7 +33,10 @@
         "colab_type": "text"
       },
       "source": [
-        "# Install dependancies, takes around 45 seconds\n",
+        "# MSDS-462 Week 2: Rendering OpenAI Gym in Colab  \n",
+        "Objective: Train Ms. Pacman agent with random moves.\n",
+        "\n",
+        "# Install Dependencies, takes around 45 seconds\n",
         "\n",
         "Rendering Dependancies\n",
         "\n"
@@ -61,7 +64,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Pacman Dependancies"
+        "Pacman Dependencies"
       ]
     },
     {
